cluster-applications/platform-policy/policies/require-labels.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-labels
spec:
  validationFailureAction: Audit
  rules:
    - name: require-app-labels
      match:
        any:
          - resources:
              kinds:
                - Deployment
      validate:
        message: "Deployments must have app.kubernetes.io/name and app.kubernetes.io/version labels."
        pattern:
          metadata:
            labels:
              app.kubernetes.io/name: "?*"
              app.kubernetes.io/version: "?*"
